Updated content, reformatted HTML tags and containers, updated styles

--- a/index.html
+++ b/index.html
@@ -30,42 +30,60 @@
 <main id="main-doc">
     
   <section class="main-section" id="Preface">
-        <header>Preface</header>
-        <p>This page will introduce some fundamentals of the Japanese language through basic phrases, grammar, and vocabulary. Each section listed in the sidebar will provide either a vocabulary list or a grammar explanation, which you can then apply to each of the <strong>Let's Try!</strong> exercises.</p>
+    <header>Preface</header>
+    <p>This page will introduce some fundamentals of the Japanese language through basic phrases, grammar, and vocabulary. 
+          Each section listed in the sidebar will link to a vocabulary list or a grammar explanation. 
+          Read the material thoroughly, then test your knowledge with the <strong>Let's Try!</strong> exercises.</p>
     <ul>Upon completing this lesson, you should be able to:<ul>
       <li>Recite basic Japanese greetings and other useful phrases</li>
       <li>Make simple sentences about your name, age, and nationality</li>
-      <li>Recall basic vocabulary including numbers, countries, occupations, and family members
-    <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.
+      <li>Recall basic vocabulary including numbers, countries, occupations, and family members</li>
+    <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, 
+      as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.</p>
     <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" target="blank_">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.    
     </section>
 
     <section class="main-section" id="Japanese_Greetings_and_Useful_Phrases">
       <header>Japanese Greetings and Useful Phrases</header>
-      <p>Before we dive into Japanese grammar, let's learn some basic greetings and everyday phrases. You may have heard some of these before in Japanese media and pop culture. If so, you’re coming into Japanese with a head start! Look over these phrases and try saying them a few times before going to the first grammar lessons.</p>
-      <code>おはようございます。= Good morning. 	おはよう。= Good morning. (casual)
-こんにちは。= Good afternoon. / Hello. (note that the 「は」is pronounced like 「わ」)
-こんばんは。= Good evening. (that 「は」pronunciation applies here, too.)
-おやすみなさい。= Good night.	おやすみ。= Good night. (casual)
-さようなら。= Goodbye. (Implies a longer goodbye)
-じゃあね。= Bye. / See you later. (casual)	すみません。= Excuse me.
-ごめんなさい。= I'm sorry.		ごめん。= Sorry. (casual)
-ありがとうございます。= Thank you.
-ありがとう。= Thanks. (casual)
-はじめまして。= How do you do? / Nice to meet you. (Said as a greeting when meeting someone new)
-よろしくおねがいします。 = Nice to meet you. (Said when introducing oneself following one's name; also used as a greeting/polite phrase in other situations)
-おなまえは？= What's your name? (なまえ means “name”; the 「は」is pronounced like 「わ」)
-        はい。/ いいえ。= Yes / No </code>
+      <ul>Before we dive into Japanese grammar, let's learn some basic greetings and everyday phrases. You may have heard some of these before in Japanese media and pop culture. 
+        If so, you're coming into Japanese with a head start! Look over these phrases and try saying them a few times before going to the first grammar lessons.</ul>
+      <div class="vocab-container">
+        <li>おはようございます。= Good morning.</li>
+        <li>おはよう。= Good morning. (casual)</li>
+        <li>こんにちは <strong>*</strong> = Good afternoon. / Hello.</li>
+        <li>こんばんは。<strong>*</strong> = Good evening.</li>
+        <li>おやすみなさい。= Good night.</li>
+        <li>おやすみ。= Good night. (casual)</li>
+        <li>さようなら。= Goodbye. (has the nuance of a prolonged farewell)</li>
+        <li>じゃあね。= Bye. / See you later. (casual)</li>
+        <li>すみません。= Excuse me.</li>
+        <li>ごめんなさい。= I'm sorry.</li>		
+        <li>ごめん。= Sorry. (casual)</li>
+        <li>ありがとうございます。= Thank you.</li>
+        <li>ありがとう。= Thanks. (casual)</li>
+        <li>はじめまして。= How do you do? / Nice to meet you. (Said as a greeting when meeting someone new)</li>
+        <li>よろしくおねがいします。 = Nice to meet you. (Said when introducing oneself following one's name; also used as a greeting/polite phrase in other situations)</li>
+        <li>おなまえは？<strong>*</strong> = What's your name?</li>
+        <li>はい。/ いいえ。= Yes / No</li> 
+      </div>
+      <div class="note">
+        <p><strong>*</strong> The は at the end of these phrases is pronounced like わ.</p>
+      </div>
       </section>
  
  <section class="main-section" id="Grammar:_“I_Am”_-_NounはNounです">
    <header>Grammar: “I Am” - NounはNounです</header>
-   <p>The grammar particle 「は」marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 「は」is the most fundamental of these particles. In learning Hiragana, you probably learned that 「は」is pronounced like 「わ」when used as the subject marker. This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
-   <p>The word 「です」is used to complete a sentence following a noun. 「です」is like a period at the end of a sentence that makes something 'what it is.' It's the difference between just saying the word “doctor” and stating “I am a doctor.” By putting some nouns in their proper places with 「は」and 「です」, we can make some simple sentences that say “____ is _____.”</p>
-   <code>わたしはトムです。
-I am Tom.
-かのじょはせんせいです。
-She is a teacher.
+   <p>The grammar particle 「は」marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
+     The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 「は」is the most 
+     fundamental of these particles. In learning Hiragana, you probably learned that 「は」is pronounced like 「わ」when used as the subject marker. 
+     This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
+   <p>The word 「です」is used to complete a sentence following a noun. 「です」is like a period at the end of a sentence that makes something 'what it is.' 
+     It's the difference between just saying the word “doctor” and stating “I am a doctor.” By putting some nouns in their proper places with 
+     「は」and 「です」, we can make some simple sentences that mean “____ is _____.”</p>
+   <code>わたしはトムです。<br>
+    I am Tom.<br>
+    かのじょはせんせいです。<br>
+    She is a teacher.<br>
    </code>
    <div class="note">
      <h2>Note: Null-Subject Language</h2>
@@ -75,12 +93,19 @@ She is a teacher.
 
 <section class="main-section" id="Vocabulary:_Japanese_Occupations">
   <header>Vocabulary: Japanese Occupations</header>
-  <p>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the “Let’s Try!” exercises that follow.</p>
-  <code>
-    せんせい = teacher		がくせい = student		いしゃ = doctor
-    かんごし = nurse		せんしゅ = athlete		ミュージシャン = musician
-    かいしゃいん = office worker べんごし  = lawyer	かがくしゃ = scientist
-  </code>
+  <ul>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the “Let's Try!” 
+    exercises that follow.</ul>
+  <div class="vocab-container">
+    <li>せんせい = teacher</li>
+    <li>がくせい = student</li>		
+    <li>いしゃ = doctor</li>
+    <li>かんごし = nurse</li>		
+    <li>せんしゅ = athlete</li>		
+    <li>ミュージシャン = musician</li>
+    <li>かいしゃいん = office worker</li> 
+    <li>べんごし  = lawyer</li>	
+    <li>かがくしゃ = scientist</li>
+  </div>
 </section>
 
 <section class="main-section" id="Let's_Try!_#1">
@@ -97,38 +122,94 @@ She is a teacher.
 
 <section class="main-section" id="Grammar:_Are_You?_Is_She?_-_The_「か」_Question_Marker">
   <header>Grammar: Are You? Is She? - The 「か」 Question Marker</header>
-  <p>Let's add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender 「です」to 「ですか」takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement and add 「か」to the end to make it a question.
+  <p>Let's add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender 「です」to 「ですか」
+    takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement 
+    and add 「か」to the end to make it a question.
   </p>
-  <code>がくせいですか。
-
-  Are you a student?
-  
-  アメリカじんですか。
-  
+  <code>がくせいですか。<br>
+  Are you a student? <br>
+  アメリカじんですか。<br>
   Are you (an) American?
   </code>
 </section>
 
 <section class="main-section" id="Vocabulary:_Countries_and_Nationalities">
   <header>Vocabulary: Countries and Nationalities</header>
-  <p>Below is a list of country names in Japanese. Note that Japan and the East Asian countries are written in <em>Hiragana</em> (they have kanji characters as well), while the western nations are written in <em>Katakana</em>.</p>
-  <code>にほん = Japan	ちゅうごく = China		かんこく = Korea		アメリカ = America/ the U.S.	カナダ = Canada		メキシコ = Mexico     スペイン = Spainフランス = France	イタリア = Italy		ポルトガル = Portugal	ブラジル = Brazil		イギリス = Britain / the UK		オーストラリア = Australia  ドイツ = Germany	コロンビア = Colombia</code>
+  <p>Below is a list of country names in Japanese. Note that Japan and the East Asian countries are written in <em>Hiragana</em> 
+    (they have kanji characters as well), while the western nations are written in <em>Katakana</em>.</p>
+  <div class="vocab-container">
+  <ul>
+    <li>にほん = Japan</li>
+    <li>ちゅうごく = China</li>
+    <li>かんこく = Korea</li>
+    <li>アメリカ = America; the United States</li>	
+    <li>カナダ = Canada</li>		
+    <li>メキシコ = Mexico</li>   
+    <li>スペイン = Spain</li>
+    <li>フランス = France</li>	
+    <li>イタリア = Italy</li>
+    <li>ポルトガル = Portugal</li>	
+    <li>ブラジル = Brazil</li>		
+    <li>イギリス = Britain; the United Kingdom</li>		
+    <li>オーストラリア = Australia</li>  
+    <li>ドイツ = Germany</li>	
+    <li>コロンビア = Colombia</li>
+  </ul>
+  </div>
   <p>To turn a country name into a nationality, simply add 「じん」(meaning “person”) to the end of it. 「にほんじん」means “Japanese” (a Japanese person), メキシコじん means “Mexican” (Mexican person), and so on. Try this out with a few more nationalities and refer back to this country list as we use these words in the grammar lessons that follow.
   </p>
 </section>
 
 <section class="main-section" id="Vocabulary:_Numbers_and_Ages">
   <header>Vocabulary: Numbers and Ages</header>
-  <p>Now let’s practice reading numbers in Japanese. The numbers one through twenty are provided here, followed by the next few multiples of ten, as you should be able to grasp the pattern of these numbers. Note that the numbers four and seven have multiple readings. The readings of these numbers are usually interchangeable. The alternative pronunciations よん (four) and なな (seven) have to do with cultural superstitions about the sound shi in these numbers, which sound similar to the Japanese word for “death.” (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">this Wikipedia article</a> if you’re curious about this superstition). Look over these numbers and practice reading them aloud.
-  </p>
-  <code>1 (いち)	2 (に)		3 (さん)	4 (し / よん)		5 (ご)		6 (ろく)	7 (しち / なな)	8 (はち)	9 (きゅう)	10 (じゅう)	11 (じゅういち)  12 (じゅうに)	13 (じゅうさん)	14 (じゅうよん)	15 (じゅうご)	16 (じゅうろく)	17 (じゅうなな)	18 (じゅうはち)	19 (じゅうきゅう)	20 (にじゅう)	30 (さんじゅう)	40 (よんじゅう)	50 (ごじゅう)	60 (ろくじゅう)	70 (ななじゅう)	80 (はちじゅう)	90 (きゅうじゅう)	100 (ひゃく)</code>
+  <p>Now let's practice reading numbers in Japanese. The numbers one through twenty are provided here, followed by the next few multiples of ten, 
+    as you should be able to grasp the pattern of the numbers after twenty. Note that the numbers four and seven have multiple readings. 
+    The readings of these numbers are usually interchangeable. The alternative pronunciations よん (four) and なな (seven) are based in
+    cultural superstitions around the "shi" sound in these numbers, which sound similar to the Japanese word for “death.” 
+    (See <a href="https://en.wikipedia.org/wiki/Japanese_superstitions#Numbers" target="blank_">this Wikipedia article</a> for more on this superstition).</p> 
+  <p>Look over these numbers and practice reading them aloud.</p>
+  <div class="vocab-container">
+  <!-- Learn how to sort this list into multiple list items per line to make this div more presentable -->
+  <ul>
+    <li>1 (いち)</li>	
+    <li>2 (に)</li>		
+    <li>3 (さん)</li>
+    <li>4 (し / よん)</li>		
+    <li>5 (ご)</li>		
+    <li>6 (ろく)</li>	
+    <li>7 (しち / なな)</li>	
+    <li>8 (はち)</li>	
+    <li>9 (きゅう)</li>	
+    <li>10 (じゅう)	
+    <li>11 (じゅういち)</li>  
+    <li>12 (じゅうに)</li>	
+    <li>13 (じゅうさん)</li>	
+    <li>14 (じゅうよん)</li>	
+    <li>15 (じゅうご)</li>	
+    <li>16 (じゅうろく)</li>
+    <li>17 (じゅうなな)</li>	
+    <li>18 (じゅうはち)</li>	
+    <li>19 (じゅうきゅう)</li>	
+    <li>20 (にじゅう)</li>	
+    <li>30 (さんじゅう)</li>	
+    <li>40 (よんじゅう)</li>	
+    <li>50 (ごじゅう)</li>	
+    <li>60 (ろくじゅう)</li>	
+    <li>70 (ななじゅう)</li>	
+    <li>80 (はちじゅう)</li>	
+    <li>90 (きゅうじゅう)</li>	
+    <li>100 (ひゃく)</li>
+  </ul>
+  </div>
   <h2>Age: ~さい</h2>
-  <p>To say someone’s age, simply take a number and add the suffix 「さい」(“years old”) to the end. 「ろくさい」means “six years old,” 「よんじゅうさい」means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as 「はたち」without the 「さい」suffix.
+  <p>To say someone's age, simply take a number and add the suffix 「さい」(“years old”) to the end. 「ろくさい」means “six years old,” 「よんじゅうさい」means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as 「はたち」without the 「さい」suffix.
   </p>
   <p>To ask for an age using the 「か」suffix, use this phrase: 「なんさいですか。」</p>
   <p>An example of this question-and-answer exchange:</p>
-  <code>「なんさいですか。」(How old are you?)
-    「２５さいです。」(I am twenty-five years old.)
+  <code>なんさいですか。<br>
+    How old are you?<br>
+    ２５さいです。<br>
+    I am twenty-five years old.
     </code>
 </section>
 
@@ -147,21 +228,37 @@ She is a teacher.
 <section class="main-section" id="Grammar:_My,_Hers,_His_-_The_「の」_Possessive_Marker">
   <header>Grammar: My, Hers, His - The 「の」 Possessive Marker</header>
   <p>The particle 「の」is used between two nouns to indicate that the second noun “belongs” to the first. In context, the 「の」particle can be used to show that something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John’s mother.” The particle 「の」can also be used to group many other things in relation to one another, such as a combination of city name + country.</p>
-  <code>わたしのいえ
-    My house
-    わたしのおかあさんはせんせいです。
-    My mother is a teacher.
-    カナダのトロント
-    Toronto, Canada (note that the country name comes first in Japanese, as in “Canada’s Toronto” or “Toronto of Canada.”</code>
+  <code>わたしのいえ<br>
+    My house<br>
+    わたしのおかあさんはせんせいです。<br>
+    My mother is a teacher.<br>
+    カナダのトロント<br>
+    Toronto, Canada (note that the country name comes first in Japanese, as in “Canada's Toronto” or “Toronto of Canada.”</code>
 </section>
 
 <section class="main-section" id="Vocabulary:_Family_Members_and_Pets">
   <header>Vocabulary: Family Members and Pets</header>
-  <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the “Let’s Try!” exercises that follow.</p>
-  <code>おかあさん = mother	おとうさん = father		おにいさん = older brother
-    おねえさん = older sister	おとうと = younger brother	いもうと = younger sister
-    おじいさん = grandfather	おばあさん = grandmother		おばさん = aunt
-    おじさん = uncle	いとこ = cousin	いぬ = dog	ねこ = cat	とり = bird	きんぎょ = goldfish</code>
+  <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the “Let's Try!” exercises 
+    that follow.</p>
+  <div class="vocab-container">
+  <ul>
+    <li>おかあさん = mother</li>	
+    <li>おとうさん = father</li>
+    <li>おにいさん = older brother</li>
+    <li>おねえさん = older sister</li>	
+    <li>おとうと = younger brother</li>	
+    <li>いもうと = younger sister</li>
+    <li>おじいさん = grandfather</li>	
+    <li>おばあさん = grandmother</li>		
+    <li>おばさん = aunt</li>
+    <li>おじさん = uncle</li>	
+    <li>いとこ = cousin</li>	
+    <li>いぬ = dog</li>	
+    <li>ねこ = cat</li>	
+    <li>とり = bird</li>	
+    <li>きんぎょ = goldfish</li>
+  </ul>
+  </div>
 </section>
 
 <section class="main-section" id="Let's_Try!_#3">
@@ -182,13 +279,13 @@ She is a teacher.
   <header>Review Exercises</header>
   <p>The following exercises will combine the vocabulary and grammar covered in each of the previous sections. Try these final exercises before completing this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.</p>
   <h2>Meeting Someone New</h2>
-    <p>Please read this sample conversation and complete the underlined segments with your own answers.</p>
-    <code>Takuya: はじめまして。たくやです。おなまえは？
-      You: ______________________。よろしくおねがいします。
-      Takuya: アメリカじんですか。
-      You: _____________________________________。
-      Takuya: そうですか。なんさいですか。
-      You: __________________________________。
+    <p>Read this sample conversation and complete the underlined segments with your own answers.</p>
+    <code>Takuya: はじめまして。たくやです。おなまえは？<br>
+      You: ______________________。よろしくおねがいします。<br>
+      Takuya: アメリカじんですか。<br>
+      You: _____________________________________。<br>
+      Takuya: そうですか。なんさいですか。<br>
+      You: __________________________________。<br>
       Takuya: そうですか。じゃあ、よろしくおねがいします。</code>
     <div class="note">
       <p>(Note: そうですか = Is that so? / I see; used in conversation to acknowledge what has been said to you)</p>
