Renamed sections and navbar IDs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>FCC Technical Documentation Page</title>
-    <meta charset="UTF-8" lang="en">
+    <meta charset="UTF-8" lang="en-us">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,14 +14,14 @@
     <a class="nav-link" href="#Japanese_Greetings_and_Useful_Phrases">Japanese Greetings and Useful Phrases</a>
     <a class="nav-link" href="#Grammar:_“I_Am”_-_NounはNounです">Grammar: “I Am” - NounはNounです</a>
     <a class="nav-link" href="#Vocabulary:_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
-    <a class="nav-link" href="#Let's_Try!_#1">Let's Try! #1</a>
+    <a class="nav-link" href="#Give_It_a_Try!_#1">Give It a Try! #1</a>
     <a class="nav-link" href="#Grammar:_Are_You?_Is_She?_-_The_「か」_Question_Marker">Grammar: Are You? Is She? - The 「か」 Question Marker</a>
     <a class="nav-link" href="#Vocabulary:_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
     <a class="nav-link" href="#Vocabulary:_Numbers_and_Ages">Vocabulary: Numbers and Ages</a>
-    <a class="nav-link" href="#Let's_Try!_#2">Let's Try! #2</a>
+    <a class="nav-link" href="#Give_It_a_Try!_#2">Give It a Try! #2</a>
     <a class="nav-link" href="#Grammar:_My,_Hers,_His_-_The_「の」_Possessive_Marker">Grammar: My, Hers, His - The 「の」 Possessive Marker</a>
     <a class="nav-link" href="#Vocabulary:_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a>
-    <a class="nav-link" href="#Let's_Try!_#3">Let's Try! #3</a>
+    <a class="nav-link" href="#Give_It_a_Try!_#3">Give It a Try! #3</a>
     <a class="nav-link" href="#Review_Exercises">Review Exercises</a>
 </nav>
 
@@ -33,7 +33,7 @@
     <header>Preface</header>
     <p>This page will introduce some fundamentals of the Japanese language through basic phrases, grammar, and vocabulary. 
           Each section listed in the sidebar will link to a vocabulary list or a grammar explanation. 
-          Read the material thoroughly, then test your knowledge with the <strong>Let's Try!</strong> exercises.</p>
+          Read the material thoroughly, then test your knowledge with the <strong>Give It a Try!</strong> exercises.</p>
     <ul>Upon completing this lesson, you should be able to:<ul>
       <li>Recite basic Japanese greetings and other useful phrases</li>
       <li>Make simple sentences about your name, age, and nationality</li>
@@ -93,7 +93,7 @@
 
 <section class="main-section" id="Vocabulary:_Japanese_Occupations">
   <header>Vocabulary: Japanese Occupations</header>
-  <ul>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the “Let's Try!” 
+  <ul>Below is a list of some occupations in Japanese. Read over the vocabulary on this list and refer to it when doing the <strong>Give It a Try!</strong>
     exercises that follow.</ul>
   <div class="vocab-container">
     <li>せんせい = teacher</li>
@@ -108,12 +108,12 @@
   </div>
 </section>
 
-<section class="main-section" id="Let's_Try!_#1">
-  <header>Let's Try! #1</header>
+<section class="main-section" id="Give_It_a_Try!_#1">
+  <header>Give It a Try! #1</header>
   <ul>Translate these Japanese sentences into English:</ul>
-    <li>ジョンはいしゃです。</li>
-    <li>かれはかいしゃいんです。</li>
-    <li>かのじょはがくせいです。</li>
+    <li lang="ja-jp">ジョンはいしゃです。</li>
+    <li lang="ja-jp">かれはかいしゃいんです。</li>
+    <li lang="ja-jp">かのじょはがくせいです。</li>
   </ul>
   <ul>Translate these English sentences into Japanese:</ul>
     <li>Tom is a lawyer.</li>
@@ -213,8 +213,8 @@
     </code>
 </section>
 
-<section class="main-section" id="Let's_Try!_#2">
-  <header>Let's Try! #2</header>
+<section class="main-section" id="Give_It_a_Try!_#2">
+  <header>Give It a Try! #2</header>
   <ul>Please translate these Japanese questions into English:</ul>
     <li>かれはイタリアじんですか。</li>
     <li>ジョンはべんごしですか。</li>
@@ -261,8 +261,8 @@
   </div>
 </section>
 
-<section class="main-section" id="Let's_Try!_#3">
-  <header>Let's Try! #3</header>
+<section class="main-section" id="Give_It_a_Try!_#3">
+  <header>Give It a Try! #3</header>
   <ul>Translate these Japanese sentences into English:</ul>
     <li>かのじょのおかあさんはかんごしです。</li>
     <li>かれのおとうとは１０さいです。</li>
