Reformatted content, added styles

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <a class="nav-link" href="#Grammar:_“I_Am”_-_NounはNounです">Grammar: “I Am” - NounはNounです</a>
     <a class="nav-link" href="#Vocabulary:_Japanese_Occupations">Vocabulary: Japanese Occupations</a>
     <a class="nav-link" href="#Give_It_a_Try!_#1">Give It a Try! #1</a>
-    <a class="nav-link" href="#Grammar:_Are_You?_Is_She?_-_The_「か」_Question_Marker">Grammar: Are You? Is She? - The 「か」 Question Marker</a>
+    <a class="nav-link" href="#Grammar:_Are_You?_Is_She?_-_The_か_Question_Marker">Grammar: Are You? Is She? - The か Question Marker</a>
     <a class="nav-link" href="#Vocabulary:_Countries_and_Nationalities">Vocabulary: Countries and Nationalities</a>
     <a class="nav-link" href="#Vocabulary:_Numbers_and_Ages">Vocabulary: Numbers and Ages</a>
     <a class="nav-link" href="#Give_It_a_Try!_#2">Give It a Try! #2</a>
-    <a class="nav-link" href="#Grammar:_My,_Hers,_His_-_The_「の」_Possessive_Marker">Grammar: My, Hers, His - The 「の」 Possessive Marker</a>
+    <a class="nav-link" href="#Grammar:_My,_Hers,_His_-_The_の_Possessive_Marker">Grammar: My, Hers, His - The の Possessive Marker</a>
     <a class="nav-link" href="#Vocabulary:_Family_Members_and_Pets">Vocabulary: Family Members and Pets</a>
     <a class="nav-link" href="#Give_It_a_Try!_#3">Give It a Try! #3</a>
     <a class="nav-link" href="#Review_Exercises">Review Exercises</a>
 </nav>
 
-<!-- Consider modifying IDs and section names because they look tacky in navbar-->
+<!-- Use color-styled code tags to note Japanese text in the sections instead of quote brackets? -->
 
 <main id="main-doc">
     
@@ -38,9 +38,12 @@
       <li>Recite basic Japanese greetings and other useful phrases</li>
       <li>Make simple sentences about your name, age, and nationality</li>
       <li>Recall basic vocabulary including numbers, countries, occupations, and family members</li>
+    </ul>
+    <div class="prereqs">
     <p><strong>Prerequisites:</strong> The reader should be able to read <em>Hiragana</em> and <em>Katakana</em> to follow this lesson, 
       as <em>Romaji</em> will not be used with Japanese sentences. <em>Kanji</em> characters will not be used in this lesson.</p>
-    <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" target="blank_">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.    
+    <p>See <a href="http://guidetojapanese.org/learn/category/grammar-guide/the-writing-system/" target="blank_">Tae Kim's Guide to Japanese</a> for a lesson on the <em>Hiragana</em> and <em>Katakana</em> writing systems.</p>
+    </div>    
     </section>
 
     <section class="main-section" id="Japanese_Greetings_and_Useful_Phrases">
@@ -73,13 +76,13 @@
  
  <section class="main-section" id="Grammar:_“I_Am”_-_NounはNounです">
    <header>Grammar: “I Am” - NounはNounです</header>
-   <p>The grammar particle 「は」marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
-     The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker 「は」is the most 
-     fundamental of these particles. In learning Hiragana, you probably learned that 「は」is pronounced like 「わ」when used as the subject marker. 
+   <p>The grammar particle は marks the subject of a sentence, such as “I,” “He,” “Tom,” or whatever else a speaker is talking about. 
+     The Japanese language contains several of these “particles” that show the role of a word in a sentence, and the subject marker は is the most 
+     fundamental of these particles. In learning Hiragana, you probably learned that は is pronounced like わ when used as the subject marker. 
      This irregular reading may seem jarring at first, but will be easy to pick up as we read Japanese sentences in context.</p>
-   <p>The word 「です」is used to complete a sentence following a noun. 「です」is like a period at the end of a sentence that makes something 'what it is.' 
+   <p>The word です is used to complete a sentence following a noun. です is like a period at the end of a sentence that makes something 'what it is.' 
      It's the difference between just saying the word “doctor” and stating “I am a doctor.” By putting some nouns in their proper places with 
-     「は」and 「です」, we can make some simple sentences that mean “____ is _____.”</p>
+     は and です, we can make some simple sentences that mean “____ is _____.”</p>
    <code>わたしはトムです。<br>
     I am Tom.<br>
     かのじょはせんせいです。<br>
@@ -87,7 +90,9 @@
    </code>
    <div class="note">
      <h2>Note: Null-Subject Language</h2>
-     <p>Japanese is what is called a “null-subject language,” which means that the subject of a sentence can be omitted in cases when it is obvious to the speaker and listener. For example, if a person named Yuki introduces himself, 「ゆうきです」rather than 「わたしはゆうきです」is still a correct way to say “I am Yuki” because it is clear that Yuki is speaking of himself and giving his name.</p>
+     <p>Japanese is what is called a “null-subject language,” which means that the subject of a sentence can be omitted in cases when it is obvious to 
+       the speaker and listener. For example, if a person named Yuki introduces himself, ゆうきです rather than わたしはゆうきです is still a correct way to say 
+       “I am Yuki” because it is clear that Yuki is speaking of himself and giving his name.</p>
    </div>
 </section>
 
@@ -120,11 +125,11 @@
     <li>She is a scientist.</li>
 </section>
 
-<section class="main-section" id="Grammar:_Are_You?_Is_She?_-_The_「か」_Question_Marker">
-  <header>Grammar: Are You? Is She? - The 「か」 Question Marker</header>
-  <p>Let's add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender 「です」to 「ですか」
+<section class="main-section" id="Grammar:_Are_You?_Is_She?_-_The_か_Question_Marker">
+  <header>Grammar: Are You? Is She? - The か Question Marker</header>
+  <p>Let's add another grammar particle to what we know. The 「か」particle marks a question, so changing our sentence ender です to ですか
     takes us from “It is ___” to “Is it ___?” Forming questions is very easy in Japanese, because we can take the structure of an ordinary statement 
-    and add 「か」to the end to make it a question.
+    and add か to the end to make it a question.
   </p>
   <code>がくせいですか。<br>
   Are you a student? <br>
@@ -156,7 +161,9 @@
     <li>コロンビア = Colombia</li>
   </ul>
   </div>
-  <p>To turn a country name into a nationality, simply add 「じん」(meaning “person”) to the end of it. 「にほんじん」means “Japanese” (a Japanese person), メキシコじん means “Mexican” (Mexican person), and so on. Try this out with a few more nationalities and refer back to this country list as we use these words in the grammar lessons that follow.
+  <p>To turn a country name into a nationality, simply add じん (meaning “person”) to the end of it. にほんじん means “Japanese” (a Japanese person), 
+    メキシコじん means “Mexican” (Mexican person), and so on. Try this out with a few more nationalities and refer back to this country list as we use 
+    these words in the grammar lessons that follow.
   </p>
 </section>
 
@@ -202,9 +209,10 @@
   </ul>
   </div>
   <h2>Age: ~さい</h2>
-  <p>To say someone's age, simply take a number and add the suffix 「さい」(“years old”) to the end. 「ろくさい」means “six years old,” 「よんじゅうさい」means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as 「はたち」without the 「さい」suffix.
+  <p>To say someone's age, simply take a number and add the suffix さい (“years old”) to the end. ろくさい means “six years old,” よんじゅうさい 
+    means “forty years old,” and so on. A notable exception is twenty years old (the age of adulthood in Japan), which reads as はたち without the さい suffix.
   </p>
-  <p>To ask for an age using the 「か」suffix, use this phrase: 「なんさいですか。」</p>
+  <p>To ask for an age using the か suffix, use this phrase: なんさいですか。</p>
   <p>An example of this question-and-answer exchange:</p>
   <code>なんさいですか。<br>
     How old are you?<br>
@@ -225,9 +233,11 @@
     <li>なんさいですか。</li>
 </section>
 
-<section class="main-section" id="Grammar:_My,_Hers,_His_-_The_「の」_Possessive_Marker">
-  <header>Grammar: My, Hers, His - The 「の」 Possessive Marker</header>
-  <p>The particle 「の」is used between two nouns to indicate that the second noun “belongs” to the first. In context, the 「の」particle can be used to show that something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John’s mother.” The particle 「の」can also be used to group many other things in relation to one another, such as a combination of city name + country.</p>
+<section class="main-section" id="Grammar:_My,_Hers,_His_-_The_の_Possessive_Marker">
+  <header>Grammar: My, Hers, His - The の Possessive Marker</header>
+  <p>The particle の is used between two nouns to indicate that the second noun “belongs” to the first. In context, the の particle can be used to show that 
+    something is “my” or “his” or “of” a certain group, or it has the role of the “apostrophe-s” in “John's mother.” The particle の can also be used to group 
+    many other things in relation to one another, such as a combination of city name + country.</p>
   <code>わたしのいえ<br>
     My house<br>
     わたしのおかあさんはせんせいです。<br>
@@ -238,8 +248,8 @@
 
 <section class="main-section" id="Vocabulary:_Family_Members_and_Pets">
   <header>Vocabulary: Family Members and Pets</header>
-  <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the “Let's Try!” exercises 
-    that follow.</p>
+  <p>Below is a list of vocabulary for family and members and common types of pets. Look over the list and refer to it when doing the 
+    <strong>Give It a Try!</strong> exercises that follow.</p>
   <div class="vocab-container">
   <ul>
     <li>おかあさん = mother</li>	
@@ -277,7 +287,8 @@
 
 <section class="main-section" id="Review_Exercises">
   <header>Review Exercises</header>
-  <p>The following exercises will combine the vocabulary and grammar covered in each of the previous sections. Try these final exercises before completing this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.</p>
+  <p>The following exercises will combine the vocabulary and grammar covered in each of the previous sections. Try these final exercises before completing 
+    this lesson. You can refer to the previous grammar explanations and vocabulary lists as needed.</p>
   <h2>Meeting Someone New</h2>
     <p>Read this sample conversation and complete the underlined segments with your own answers.</p>
     <code>Takuya: はじめまして。たくやです。おなまえは？<br>
